# dimension-quality-analyzer

./: .gitignore  CLAUDE.md  README.md  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
core/: __init__.py  ai_report.py  excel_parser.py  export.py  grouping.py  mapping.py  statistics.py  visualization.py
docs/: GOOGLE_LOGIN_SETUP.md
sample_data/: template.xlsx
