[project]
name = "box-and-whisker-plot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.42",
  "pandas>=2.1",
  "openpyxl>=3.1",
  "xlrd>=2.0.1",
  "plotly>=5.18",
  "numpy>=1.24",
  "scipy>=1.10",
  "requests>=2.31",
  "authlib>=1.3.2",
  "httpx>=0.27",
  "kaleido==0.2.1",
  "fpdf2>=2.7",
]
